# marketplace

./: .gitignore  Makefile  analize.ipynb  enrich.ipynb  item.json  output.json  pyproject.toml  reduce.ipynb  resp.html  rnd copy.ipynb  rnd.ipynb  rnd_sale.ipynb  scrapy.cfg
bazaraki/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
bazaraki/spiders/: property.py
marketplace/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
marketplace/spiders/: spider.py
