[tool.poetry]
name = "bazaraki"
version = "0.1.0"
description = ""
authors = ["Alekei Grachev <aleksei.grachev@alberblanc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.6.0"
scrapy = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
