[tool.poetry]
name = "bazaraki"
version = "0.1.0"
description = ""
authors = ["Alekei Grachev <aleksei.grachev@alberblanc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.6.0"
scrapy = "^2.12.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
nbformat = "^5.10.4"
dtale = "^3.16.0"
kaleido = "0.2.1"
loguru = "^0.7.3"
tqdm = "^4.67.1"
swifter = "^1.4.0"
datacompy = "^0.14.4"
parse = "^1.20.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
